# rust-async-zip-test

./: Cargo.toml  gen_test_file.sh
src/: main.rs
